mobile featured image full width

--- a/app/assets/stylesheets/_welcome.css.scss
+++ b/app/assets/stylesheets/_welcome.css.scss
@@ -235,10 +235,9 @@ $gray:  #2a2a2a;
   .parentflex {
     width: 100%;
     margin-top: -5px;
-  }
-  .articles2-6 {
-    margin-left: auto;
-    margin-right: auto;
+    .divfeatured {
+      margin-bottom: 20px;
+    }
   }
   .newest {
     width: 100%;
