--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,4 +1,3 @@
-<div class="wrapper_home">
 <div class="body">
   <div class="gray--background">
     <div class="home--main">
@@ -8,11 +7,7 @@
             <% if @posts_featured %>
               <div class="featured individual">
                 <div class="featured_img">
-                  <% if (@posts_featured.image != "" && @posts_featured.image != nil) %>
-                  <%=link_to(image_tag(@posts_featured.image, :id => "image_thumbnail"), @posts_featured )%>
-                  <% else %>
-                  <%=link_to(image_tag(@posts_featured.thumbnail.url, :id => "image_thumbnail"), @posts_featured )%>
-                  <% end %>
+                  <%=link_to(image_tag(@posts_featured.thumbnail.url(:large2), :id => "image_thumbnail"), @posts_featured )%>
                 </div>
                 <h3 class="article_title"><a href="#"><%= link_to @posts_featured.title, @posts_featured %></a></h3>
                 <p class="date"><%= @posts_featured.created_at.strftime("%A, %b %d")%></p>
@@ -22,11 +17,7 @@
           <div class="articles2-6">
               <% @posts_approved[1..4].each do |post| %>
                 <div class="thumbnail">
-                  <% if (post.image != "" && post.image != nil) %>
-                  <%=link_to(image_tag(post.image, :class => "image_thumbnail"), post )%>
-                  <% else %>
                   <%=link_to(image_tag(post.thumbnail.url(:medium), :class => "image_thumbnail"), post )%>
-                  <% end %>
                   <div class="thumbnail--container">
                     <h3 class="article_title"><a href="#"><%= link_to post.title, post %></a></h3>
                     <p class="date"><%= post.created_at.strftime("%A, %b %d")%></p>
@@ -42,6 +33,7 @@
     </div>
   </div>
 
+  <div class="wrapper_home">
   <h1 class="section--title">Beauty</h1>
   <div class="flex--welcome">
     <div class="flex-1">
