--- a/app/views/pages/writing.html.erb
+++ b/app/views/pages/writing.html.erb
@@ -6,6 +6,7 @@
   <p>Articles should be formatted so that they can be skimmmed over and be understandable. This means that your article should follow these basic requirements:</p>
   <ol>
     <li>No paragraphs should be more than four lines on desktop. </li>
+    <li>Limit the use of "I" and "my".</li>
     <li>Articles should have at least one image, preferably more.</li>
     <li>Articles should be split up into multple sections with headers. Avoid one worded headers if you can. Be creative!</li>
   </ol>
@@ -17,7 +18,7 @@
     - <b>Title:</b> Titles should be at least six words long. They should reflect keywords that people are searching for and be unique.
   </p>
   <p>
-    - <b>Introductory Paragraph:</b> The first few sentences are the most important for SEO (Search Engin Optimization) and therefore should be descriptive and include words that describe what the article is going to be about.
+    - <b>Introductory Paragraph:</b> The first few sentences are the most important for SEO (Search Engin Optimization) and therefore should be descriptive and include words that describe what the article is going to be about. <i>Do not start your article with something like "Hey!" or "Hi everyone!" or reference your last article.</i>
   </p>
   <img class="image" src="http://i.imgur.com/212OZEZ.png" />
   <p>
@@ -80,6 +81,22 @@
     </p>
     <img class="image" src="http://i.imgur.com/kAlhUpl.png" />
 
+    <h3>Uploading Images</h3>
+    <p>
+      To upload your own image, click on the image symbol boxed in green. Click on the "Upload" tab.
+    </p>
+    <img class="image" src="http://i.imgur.com/49VWtZP.png"/>
+    <p>
+      Then click on "Choose File" and choose an image from your computer.
+    </p>
+    <img class="image" src="http://i.imgur.com/B9ZmhQQ.png" />
+    <p>
+      <b>IMPORTANT!</b> You need to click on "Send it to the Server" before clicking "OK". This can take up to 10 seconds. It should automatically reroute you to "Image Info". The larger the image, the more time it takes.
+    </p>
+    <p>
+      <b>"Image source URL is missing"</b>: If you get this error, it means that you did not click on "Send it to the Server", or your image is too large to be uploaded.
+    </p>
+    <img class="image" src="http://i.imgur.com/U55FGsI.png" />
   </div>
 
   <hr />
