--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -34,7 +34,7 @@
   </div>
 
   <div class="wrapper_home">
-  <h1 class="section--title">Beauty</h1>
+  <h1 class="section--title"><a href="/categories/beauty">Beauty</a></h1>
   <div class="flex--welcome">
     <div class="flex-1">
       <div class="beauty--section">
@@ -52,7 +52,7 @@
         <% end %>
       </div>
       <div class="entertainment--section">
-        <h1 class="section--title">Entertainment</h1>
+        <h1 class="section--title"><a href="/categories/entertainment">Entertainment</a></h1>
         <div class="entertainment">
           <% @number = 0 %>
           <% @posts_approved_entertainment.each do |post_entertainment| %>
