--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -367,8 +367,7 @@ footer {
   font-size: 2em;
   font-family: 'Vollkorn', serif;
   a {
-    color: $highlight;
-    text-shadow: 1px 1px #191919;
+    color: black;
     text-decoration: none;
   }
 }
