--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,7 +29,6 @@
       <a href="/categories/beauty">Beauty</a>
       <a href="/categories/fashion">Fashion</a>
       <a href="/categories/entertainment">Entertainment</a>
-      <%= link_to "All Articles", posts_path %>
       <%= link_to "Contact", new_contact_path %>
       <% if current_user && (current_user.admin? || current_user.editor?) %>
         <%= link_to "Users", users_path %>
@@ -54,7 +53,7 @@
             <a href="/categories/beauty">Beauty</a>
             <a href="/categories/fashion">Fashion</a>
             <a href="/categories/entertainment">Entertainment</a>
-            <%= link_to "Articles", posts_path %>
+            <%= link_to "Contact", new_contact_path %>
             <% if current_user && (current_user.admin? || current_user.editor?) %>
               <%= link_to "Users", users_path %>
             <% end %>
