--- a/app/views/users/_profile.html.erb
+++ b/app/views/users/_profile.html.erb
@@ -18,32 +18,32 @@
     </h2>
 
     <% if (@user.description != "" && @user.description != nil) %>
-      <p><%= @user.description %></p>
+      <p class="description_user"><%= @user.description %></p>
     <% end %>
 
-      <p class="website">
+      <div class="website">
         <% if (@user.website != "" && @user.website !=  nil) %>
-           Website: <a href="<%= @user.website %>" target="_blank"><%= @user.website %></a>
+           <p class="website_link"><span>Website: </span><a href="<%= @user.website %>" target="_blank"><%= @user.website %></a></p>
         <% end %>
         <% if (@user.twitter != "" && @user.twitter !=  nil) %>
-           <a href="<%= @user.twitter %>" target="_blank"><i class="fa fa-twitter" aria-hidden="false"></i></a>
+           <p class="website_link"><a href="<%= @user.twitter %>" target="_blank"><i class="fa fa-twitter" aria-hidden="false"></i></a></p>
         <% end %>
         <% if (@user.insta != "" && @user.insta != nil) %>
-           <a href="<%= @user.insta %>" target="_blank"><i class="fa fa-instagram" aria-hidden="false"></i></a>
+           <p class="website_link"><a href="<%= @user.insta %>" target="_blank"><i class="fa fa-instagram" aria-hidden="false"></i></a>
         <% end %>
         <% if (@user.facebook != "" && @user.facebook !=  nil) %>
-           <a href="<%= @user.facebook %>" target="_blank"><i class="fa fa-facebook-official" aria-hidden="true"></i></a>
+           <p class="website_link"><a href="<%= @user.facebook %>" target="_blank"><i class="fa fa-facebook-official" aria-hidden="true"></i></a></p>
         <% end %>
         <% if (@user.youtube != "" && @user.youtube != nil) %>
-           <a href="<%= @user.youtube %>" target="_blank"><i class="fa fa-youtube" aria-hidden="true"></i></a>
+           <p class="website_link"><a href="<%= @user.youtube %>" target="_blank"><i class="fa fa-youtube" aria-hidden="true"></i></a></p>
         <% end %>
         <% if (@user.pintrest != "" && @user.pintrest != nil) %>
-           <a href="<%= @user.pintrest %>" target="_blank"><i class="fa fa-pinterest" aria-hidden="true"></i></a>
+           <p class="website_link"><a href="<%= @user.pintrest %>" target="_blank"><i class="fa fa-pinterest" aria-hidden="true"></i></a></p>
         <% end %>
         <% if (@user.snap != "" && @user.snap != nil) %>
-           <a href="<%= @user.snap %>" target="_blank"><i class="fa fa-snapchat" aria-hidden="true"></i></a>
+           <p class="website_link"><a href="<%= @user.snap %>" target="_blank"><i class="fa fa-snapchat" aria-hidden="true"></i></a></p>
         <% end %>
-      </p>
+      </div>
     </div>
   </div>
 </div>
