--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,7 +29,7 @@
       <a href="/categories/beauty">Beauty</a>
       <a href="/categories/fashion">Fashion</a>
       <a href="/categories/entertainment">Entertainment</a>
-      <%= link_to "Contact", new_contact_path %>
+      <a href="/contact-us">Contact</a>
       <% if current_user && (current_user.admin? || current_user.editor?) %>
         <%= link_to "Users", users_path %>
       <% end %>
@@ -37,7 +37,7 @@
          <%= link_to "Dashboard", user_path(current_user) %>
          <%= link_to "Sign Out", destroy_user_session_path, method: :delete %>
      <% else %>
-         <%= link_to "Apply", new_apply_path %>
+         <a href="/apply">Apply</a>
       <% end %>
     </div>
     <div class="overflow">
@@ -53,7 +53,7 @@
             <a href="/categories/beauty">Beauty</a>
             <a href="/categories/fashion">Fashion</a>
             <a href="/categories/entertainment">Entertainment</a>
-            <%= link_to "Contact", new_contact_path %>
+            <a href="/contact-us">Contact</a>
             <% if current_user && (current_user.admin? || current_user.editor?) %>
               <%= link_to "Users", users_path %>
             <% end %>
@@ -61,7 +61,7 @@
                <%= link_to "Dashboard", user_path(current_user) %>
                <%= link_to "Sign Out", destroy_user_session_path, method: :delete %>
             <% else %>
-               <%= link_to "Apply", new_apply_path %>
+            <a href="/apply">Apply</a>
             <% end %>
             <a href="https://twitter.com/TheTeenMagazin_" target="_blank"><i class="fa fa-twitter" aria-hidden="false"></i></a>
             <a href="https://www.instagram.com/theteenmagazine_" target="_blank"><i class="fa fa-instagram" aria-hidden="false"></i></a>
