--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -38,6 +38,10 @@
 <%= f.label "Snapchat" %>
 <%= f.text_field :snap %>
 
+<% @full = @user.first_name + " " + @user.last_name %>
+
+<%= f.hidden_field :full_name, :value => @full %>
+
 <% if current_user && current_user.admin? %>
 <%= f.label "Editor" %>
 <%= f.check_box :editor %><br />
