friendly url for users

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,6 +1,6 @@
 <h1 id="page_title">Edit Profile</h1>
 
-<div class="skinny_wrapper wrapper_padding">
+<div class="skinny_wrapper wrapper_padding" style="max-width: 1000px;">
 
 <%= render 'form' %>
 
