updated apply links

--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -22,7 +22,7 @@
              </div>
            <% end %>
          </div>
-         <a class="apply" href="/applies/new" target="blank">
+         <a class="apply" href="/apply" target="blank">
          </a>
        </div>
      </div>
