--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -80,11 +80,16 @@
     </div>
 
     <footer id="main_footer">
-      <p class="copyright">The Teen Magazine</p>
-      <nav>
-        <a href="https://twitter.com/TheTeenMagazin_" target="_blank"><i class="fa fa-twitter" aria-hidden="false"></i></a>
-        <a href="https://www.instagram.com/theteenmagazine_" target="_blank"><i class="fa fa-instagram" aria-hidden="false"></i></a>
-      </nav>
+      <div class="container--footer">
+        <div class="flex--column--footer">
+          <a href="/" class="copyright">The Teen Magazine</a>
+          <a href="/privacy-policy">Privacy Policy</a>
+        </div>
+        <nav>
+          <a href="https://twitter.com/TheTeenMagazin_" target="_blank"><i class="fa fa-twitter" aria-hidden="false"></i></a>
+          <a href="https://www.instagram.com/theteenmagazine_" target="_blank"><i class="fa fa-instagram" aria-hidden="false"></i></a>
+        </nav>
+      </div>
     </footer>
 
     <script type="text/javascript">
