hopefully fixed image problem for social sharing

--- a/app/views/layouts/article.html.erb
+++ b/app/views/layouts/article.html.erb
@@ -11,14 +11,14 @@
     <meta property="og:type"               content="article" />
     <meta property="og:title"              content="<%= @post.title %>" />
     <meta property="og:description"        content="<%= @post.meta_description %>" />
-    <meta property="og:image"              content="<%= @post.thumbnail.url(:large) %>" />
-    <meta property="og:image:url"          content="<%= @post.thumbnail.url(:large) %>" />
+    <meta property="og:image"              content="http:<%= @post.thumbnail.url(:large) %>" />
+    <meta property="og:image:url"          content="http:<%= @post.thumbnail.url(:large) %>" />
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@theteenmagazin_">
     <meta name="twitter:title" content="<%= @post.title %>">
     <meta name="twitter:description" content="<%= @post.meta_description %>">
     <meta name="twitter:creator" content="<%= @user.full_name %>">
-    <meta name="twitter:image" content="<%= @post.thumbnail.url(:large) %>">
+    <meta name="twitter:image" content="http:<%= @post.thumbnail.url(:large) %>">
     <meta name="twitter:domain" content="http://www.theteenmagazine.com/">
     <link href="https://fonts.googleapis.com/css?family=Kameron:700|Vollkorn:700" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
