fixed disappearing images

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -477,7 +477,7 @@ footer {
       height: 210px;
       background-repeat: no-repeat;
       background-size: cover;
-      background-image: url("http://i1074.photobucket.com/albums/w412/mjohansson9/backgroundimage_zps8rmwfdj1.png");      //#ff7a8f;
+      background-image: url("https://s3.amazonaws.com/theteenmagazine/app/public/ckeditor_assets/pictures/68/backgroundimage_zps8rmwfdj1.PNG");      //#ff7a8f;
       background-position: center;
       margin-bottom: -10px;
       margin-top: 10px;
