--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -69,7 +69,7 @@
         </div>
       </div>
       <div class="flex_entertainment_wrapper">
-        <a class="applies" href="/apply"><img src="http://i.imgur.com/3M0jhbo.jpg" /></a>
+        <a class="applies" href="/applies/new"><img src="http://i.imgur.com/3M0jhbo.jpg" /></a>
         <div class="entertainment_grid_container">
           <% @number2 = 0 %>
           <% @posts_approved_entertainment.each do |post_entertainment| %>
