--- a/app/views/pages/criteria.html.erb
+++ b/app/views/pages/criteria.html.erb
@@ -4,11 +4,15 @@
     What do the symbols next to my posts mean?</p>
     <span><%= image_tag "saved.png", class: "icon" %> <p class='p--nextto'>Your article is saved, and you're the only one who can see it and can edit it. It has not been submitted for approval yet.</p></span>
     <span><%= image_tag "waiting.png", class: "icon" %><p class='p--nextto'>You've submitted your finished article for review and it's waiting for an administer to approve it.</p></span>
-    <span><%= image_tag "approved.png", class: "icon" %><p class='p--nextto'>Your article is approved and is now ready to be published. It is up to you to click "Publish Article" for it to go live on the site.</p></span>
+    <span><%= image_tag "approved.png", class: "icon" %><p class='p--nextto'>Your article is approved and is now waiting to be published.</p></span>
     <span><%= image_tag "published.png", class: "icon" %><p class='p--nextto'>Your article is published and is live on The Teen Magazine.</p></span>
   <br />
-  <p class="question">How often should I submit an article?</p>
-  <p>Preferably, you should be uploading articles at least once every two weeks so that our site can stay active, but there are no official deadlines. However, if you can fit it into your schedule, we would love for you to write as many articles as you can.</p>
+
+  <p class="question">How long does it take for an article to be approved? </p>
+  <p>It depends on the article. If there are very few mistakes it can take anywhere from a few hours to a couple of days. If the article needs to be corrected by the editor or needs bigger changes, it can take up to five days to be either returned or published.</p>
+
+  <p class="question">How long does it take for an article to be published? </p>
+  <p>Usually when an article has been approved, it'll be published right away. Sometimes, however, it will be delayed by a few days if there have been many recently published articles.</p>
 
   <p class="question">How long should my article be? </p>
   <p>The perfect article length is around 500+ words. Shorter articles are okay too if they are filled with lots of images/gifs. </p>
@@ -34,6 +38,9 @@
     </ul>
   </p>
 
+  <p class="question">How often should I submit an article?</p>
+  <p>Preferably, you should be uploading articles at least once every two weeks so that our site can stay active, but there are no official deadlines. However, if you can fit it into your schedule, we would love for you to write as many articles as you can.</p>
+
 
   <p class="question">How do I include images? </p>
   <p>  Please visit <a href="/writing-the-perfect-article">Writing The Perfect Article</a></p>
@@ -43,7 +50,7 @@
   <p>Please Visit <a href="/choosing-a-topic">Choosing A Topic</a>.</p>
 
   <p class="question">What if I Want To Write Something That Doesn't Fit a Category? </p>
-  <p>Most likely this is okay. To be safe you should email Mia at johansson.mia09@gmail.com to confirm your idea. If it's about something that most teenage girls would find interesting, then it'll most likely be a good idea.</p>
+  <p>Most likely this is okay. To be safe you should email Mia at mia@theteenmagazine.com to confirm your idea. If it's about something that most teenage girls would find interesting, then it'll most likely be a good idea.</p>
 
   <p class="question">Can I write product reviews?</p>
   <p>Yes, but we limit these articles to only one for every three articles you write. Additionally, any review you write needs to be genuine and well thought out.</p>
@@ -55,13 +62,13 @@
   <p>  That's great! Tell your friend to apply at <a href="http://www.theteenmagazine.com/applies/new">www.theteenmagazine.com/applies/new</a>. We will then review your friend's application and send her an email with her account if she's accepted.</p>
 
   <p class="question">How can I become an editor?</p>
-  <p>  Editor status is only available for writers who have at least 15 published articles, but you can email Mia at johansson.mia09@gmail.com with an inquiry.</p>
+  <p>  Editor status is only available for writers who have at least 15 published articles, but you can email Mia at mia@theteenmagazine.com with an inquiry.</p>
 
   <p class="question">How can I change my password? </p>
   <p>You can change your password  <a target="_blank" href="/users/edit">here</a>.</p>
 
   <p class="question">Have a question that wasn't answered here?</p>
-  <p>  Email Mia at johansson.mia09@gmail.com! She is willing to help with anything you might have a question about. :)</p>
+  <p>  Email Mia at mia@theteenmagazine.com! She is willing to help with anything you might have a question about. :)</p>
 
   <p>Read "<a href="/choosing-a-topic">Choosing A Topic</a>" Next →</p>
 </div>
