--- a/app/views/pages/writing.html.erb
+++ b/app/views/pages/writing.html.erb
@@ -34,7 +34,7 @@
   <%= image_tag("3.png", :class=>"image")%>
 
   <h1>Formatting Your Articles</h1>
-  <img src="http://i1074.photobucket.com/albums/w412/mjohansson9/colorcode_zpse3zifzvp.jpg" />
+  <img src="http://i.imgur.com/ZuIxgIW.jpg" />
   <ol>
     <li><p style="color: #ff00aa; display: inline;">Source:</p> Changes the text to the source code (HTML and CSS). Use this button when embedding youtube videos or instagram/twitter widgets. See instructions for doing this.</li>
     <li><p style="color: #00a9ff; display: inline;">Format:</p> This button for changing the size of headers. Use Heading 1 for the main topics in your article and the others for subheaders.</li>
@@ -102,7 +102,7 @@
   <hr />
 
   <p>
-    If you're confused about any of this styling, or want to do something specific, you can email Mia at <b>johansson.mia09@gmail.com</b>
+    If you're confused about any of this styling, or want to do something specific, you can email Mia at <b>mia@theteenmagazine.com</b>
   </p>
 
   <p>Read "<a href="/finding-images">Finding Images</a>" Next →</p>
