--- a/app/views/pages/styling.html.erb
+++ b/app/views/pages/styling.html.erb
@@ -43,7 +43,7 @@
   <p>Please Visit <a href="/choosing-a-topic">Choosing A Topic</a>.</p>
 
   <p class="question">What if I Want To Write Something That Doesn't Fit a Category? </p>
-  <p>Most likely this is okay. To be safe you should email Mia at johansson.mia09@gmail.com to confirm your idea. If it's about something that most teenage girls would find interesting, then it'll most likely be a good idea.</p>
+  <p>Most likely this is okay. To be safe you should email Mia at mia@theteenmagazine.com to confirm your idea. If it's about something that most teenage girls would find interesting, then it'll most likely be a good idea.</p>
 
   <p class="question">Can I write product reviews?</p>
   <p>Yes, but we limit these articles to only one for every three articles you write. Additionally, any review you write needs to be genuine and well thought out.</p>
@@ -55,10 +55,10 @@
   <p>  That's great! Tell your friend to apply at <a href="http://www.theteenmagazine.com/applies/new">www.theteenmagazine.com/applies/new</a>. We will then review your friend's application and send her an email with her account if she's accepted.</p>
 
   <p class="question">How can I become an editor?</p>
-  <p>  Editor status is only available for writers who have at least 15 published articles. Once you have 15 published articles, you can email Mia at johansson.mia09@gmail.com with an inquiry.</p>
+  <p>  Editor status is only available for writers who have at least 15 published articles. Once you have 15 published articles, you can email Mia at mia@theteenmagazine.com with an inquiry.</p>
 
   <p class="question">Have a question that wasn't answered here?</p>
-  <p>  Email Mia at johansson.mia09@gmail.com! She is willing to help with anything you might have a question about. :)</p>
+  <p>  Email Mia at mia@theteenmagazine.com! She is willing to help with anything you might have a question about. :)</p>
 
   <p>Read "<a href="/choosing-a-topic">Choosing A Topic</a>" Next →</p>
 </div>
