--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,6 @@
 
 <h1 id="page_title" style="border-bottom: none; margin-bottom: -50px;">Waiting For Approval</h1>
-<div id="posts_wrapper" class="skinny_wrapper">
+<div id="posts_wrapper" class="skinny_wrapper index_users">
   <% @posts_waiting.each do |post| %>
   <div class="flex--postlist--item">
       <h6 id="post_title"><a href="#"><%= link_to post.title, post%></a></h6>
