--- a/app/views/users/_profile.html.erb
+++ b/app/views/users/_profile.html.erb
@@ -6,7 +6,7 @@
       <%= image_tag("https://isw.fbk.eu/sites/isw2015.fbk.eu/files/Profilo_2.jpg", :class => "profile_img") %>
     <% end %>
     <div class="info">
-    <h2>
+    <h2 style="margin-bottom: 5px;">
     <% if (@user.first_name != "" && @user.first_name !=nil) %>
       <%= @user.first_name %>
     <% end %>
@@ -20,7 +20,7 @@
       </span>
     <% end %>
     <% if (@user.description != "" && @user.description != nil) %>
-      <p class="description_user"><%= @user.description %></p>
+      <p class="description_user" style="margin-top: 5px;"><%= @user.description %></p>
     <% end %>
 
       <div class="website">
