--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -78,16 +78,6 @@
     </div>
     </div>
   </header>
-  <% if current_user && current_user.admin? %>
-    <div id="admin_links">
-      <p style="margin-bottom: 5px;">
-        <%= @post.post_impressions %> views
-        <% if @post.ranking != nil%>
-          -- rank <%= @post.ranking %>
-        <% end %>
-      </p>
-    </div>
-  <% end %>
   <div id="content">
     <div class="post_content">
       <%= markdown @post.content %>
@@ -116,6 +106,12 @@
       <%= link_to "Edit Article", edit_post_path(@post) %>
       <% if current_user && (current_user.id == @post.user_id || current_user.admin) %>
       <%= link_to "Delete", post_path(@post), method: :delete, data: {confirm: "Are you sure you want to delete this post?"} %>
+      <% end %>
+      <% if current_user && current_user.admin? %>
+            <span style="color: #9a9da4;"><span style="padding-right: .5em;"> | </span> <%= @post.post_impressions %> views
+            <% if @post.ranking != nil%>
+              -- rank <%= @post.ranking %>
+            <% end %></span>
       <% end %>
     </div>
   <% end %>
