--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -38,7 +38,7 @@
 <div class="skinny wrapper_padding" id="post_show_content">
 
   <header id="post_title_show">
-    <h1><%= @post.title %></h1>
+    <h1 class="title_article_show"><%= @post.title %></h1>
     <h3><%= @post.meta_title %></h3>
     <div class="post_info">
       <div class="left_side_flex">
@@ -182,6 +182,7 @@
 <script>
 jQuery(document).ready(function(){
   var navOffset = jQuery(".sticky").offset().top;
+
   jQuery(window).scroll(function() {
     var scrollPos = jQuery(window).scrollTop();
     if (scrollPos >= navOffset) {
