--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,6 +24,11 @@
   </head>
   <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
   <body onresize="myFunction()">
+    <style>
+    .shareaholic-share-buttons {
+      display: none;
+    }
+    </style>
     <div class="sidebar_menu hide_menu">
       <i class="fa fa-times"></i>
       <h1><%= link_to "The Teen Magazine", root_path %></h1>
